// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render renders correctly if authorized false 1`] = `
<Navbar
  color="dark"
  dark={true}
  expand="md"
  tag="nav"
>
  <LinkContainer
    activeClassName="active"
    aria-label="Home"
    exact={false}
    replace={false}
    strict={false}
    to="/without-water/"
  >
    <Styled(NavbarBrand) />
  </LinkContainer>
  <NavbarToggler
    aria-label="toggle drop menu"
    className="mr-2"
    onClick={[Function]}
    tag="button"
    type="button"
  />
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/without-water/news"
      >
        <NavItem
          tag="li"
        >
          <Styled(NavLink)>
            News
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/without-water/profile"
      >
        <NavItem
          tag="li"
        >
          <Styled(NavLink)>
            Profile
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/without-water/login"
      >
        <NavItem
          tag="li"
        >
          <Styled(NavLink)>
            Log in
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
    </Nav>
  </Collapse>
</Navbar>
`;

exports[`render renders correctly if authorized true 1`] = `
<Navbar
  color="dark"
  dark={true}
  expand="md"
  tag="nav"
>
  <LinkContainer
    activeClassName="active"
    aria-label="Home"
    exact={false}
    replace={false}
    strict={false}
    to="/without-water/"
  >
    <Styled(NavbarBrand) />
  </LinkContainer>
  <NavbarToggler
    aria-label="toggle drop menu"
    className="mr-2"
    onClick={[Function]}
    tag="button"
    type="button"
  />
  <Collapse
    appear={false}
    enter={true}
    exit={true}
    in={false}
    isOpen={true}
    mountOnEnter={false}
    navbar={true}
    onEnter={[Function]}
    onEntered={[Function]}
    onEntering={[Function]}
    onExit={[Function]}
    onExited={[Function]}
    onExiting={[Function]}
    tag="div"
    timeout={350}
    unmountOnExit={false}
  >
    <Nav
      className="ml-auto"
      navbar={true}
      tag="ul"
      vertical={false}
    >
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/without-water/news"
      >
        <NavItem
          tag="li"
        >
          <Styled(NavLink)>
            News
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={false}
        replace={false}
        strict={false}
        to="/without-water/profile"
      >
        <NavItem
          tag="li"
        >
          <Styled(NavLink)>
            Profile
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
      <LinkContainer
        activeClassName="active"
        exact={true}
        replace={false}
        strict={false}
        to="/without-water/"
      >
        <NavItem
          onClick={[Function]}
          tag="li"
        >
          <Styled(NavLink)>
            Log out
          </Styled(NavLink)>
        </NavItem>
      </LinkContainer>
    </Nav>
  </Collapse>
</Navbar>
`;
